helpdir = $(pkgdatadir)/help
dist_help_DATA = action.png chapter01.html chapter02.html chapter03.html chapter04.html chapter05.html chapter06.html chapter07.html chapter20.html chapter21.html chapter22.html clock.png device.png dirlist.png FAQ.html Image12.png Image13.png Image15.png Image17.png Image18.png Image20.png logo_lpg.png logo_tilp.png Manual_en.html options.png popup_local.png popup_remote.png scr_options1.png scr_options2.png screenshot.png tb_calc_recv.png tb_calc_send.png tilp.png tilp2.png usb_driver.html

dos2unix:
	dos2unix
	lowercase
	uppercase
