pixmapsdir = $(pkgdatadir)/pixmaps
dist_pixmaps_DATA = attr_archived.png attr_locked.png clist_dir.png ctree_close_dir.png ctree_open_dir.png logo.png screendump.png tb_backup.png tb_dirlist.png tb_help.png tb_mkdir.png tb_ready.png tb_receive.png tb_refresh.png tb_restore.png tb_send.png tb_trash.png tilp.xpm

EXTRA_DIST = copy.bat

dos2unix:
	dos2unix
	lowercase
	uppercase
